--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+p:hover,
+a:hover {
+  cursor: url('/assets/sword.png') 4 12, pointer;
+}
